src/OpenCvSharp.Native/include/open_cv_sharp/calib3d/calib3d.h

typedef struct jyppx_ocv_calib3d_point2f
{
    float x;
    float y;
} jyppx_ocv_calib3d_point2f;
typedef struct jyppx_ocv_calib3d_point3f
{
    float x;
    float y;
    float z;
} jyppx_ocv_calib3d_point3f;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_stereo_rectify_uncalibrated(
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    const jyppx_ocv_mat* fundamental,
    int image_width,
    int image_height,
    jyppx_ocv_mat* h1,
    jyppx_ocv_mat* h2,
    double threshold,
    int* success);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibrate_hand_eye(
    const jyppx_ocv_mat* const* r_gripper2base,
    const jyppx_ocv_mat* const* t_gripper2base,
    const jyppx_ocv_mat* const* r_target2cam,
    const jyppx_ocv_mat* const* t_target2cam,
    int pose_count,
    jyppx_ocv_mat* r_cam2gripper,
    jyppx_ocv_mat* t_cam2gripper,
    int method);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibrate_robot_world_hand_eye(
    const jyppx_ocv_mat* const* r_world2cam,
    const jyppx_ocv_mat* const* t_world2cam,
    const jyppx_ocv_mat* const* r_base2gripper,
    const jyppx_ocv_mat* const* t_base2gripper,
    int pose_count,
    jyppx_ocv_mat* r_base2world,
    jyppx_ocv_mat* t_base2world,
    jyppx_ocv_mat* r_gripper2cam,
    jyppx_ocv_mat* t_gripper2cam,
    int method);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_init_camera_matrix_2d(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point_offsets,
    int image_point_group_count,
    const jyppx_ocv_calib3d_point2f* image_points,
    int image_point_count,
    int image_width,
    int image_height,
    double aspect_ratio,
    jyppx_ocv_mat* camera_matrix);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibrate_camera(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point_offsets,
    int image_point_group_count,
    const jyppx_ocv_calib3d_point2f* image_points,
    int image_point_count,
    int image_width,
    int image_height,
    jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibrate_camera_extended(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point_offsets,
    int image_point_group_count,
    const jyppx_ocv_calib3d_point2f* image_points,
    int image_point_count,
    int image_width,
    int image_height,
    jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    jyppx_ocv_mat* std_deviations_intrinsics,
    jyppx_ocv_mat* std_deviations_extrinsics,
    jyppx_ocv_mat* per_view_errors,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibrate_camera_ro(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point_offsets,
    int image_point_group_count,
    const jyppx_ocv_calib3d_point2f* image_points,
    int image_point_count,
    int image_width,
    int image_height,
    int i_fixed_point,
    jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    jyppx_ocv_mat* new_object_points,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibrate_camera_ro_extended(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point_offsets,
    int image_point_group_count,
    const jyppx_ocv_calib3d_point2f* image_points,
    int image_point_count,
    int image_width,
    int image_height,
    int i_fixed_point,
    jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    jyppx_ocv_mat* new_object_points,
    jyppx_ocv_mat* std_deviations_intrinsics,
    jyppx_ocv_mat* std_deviations_extrinsics,
    jyppx_ocv_mat* std_deviations_object_points,
    jyppx_ocv_mat* per_view_errors,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_stereo_calibrate(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point1_offsets,
    int image_point1_group_count,
    const jyppx_ocv_calib3d_point2f* image_points1,
    int image_point1_count,
    const int* image_point2_offsets,
    int image_point2_group_count,
    const jyppx_ocv_calib3d_point2f* image_points2,
    int image_point2_count,
    jyppx_ocv_mat* camera_matrix1,
    jyppx_ocv_mat* dist_coeffs1,
    jyppx_ocv_mat* camera_matrix2,
    jyppx_ocv_mat* dist_coeffs2,
    int image_width,
    int image_height,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    jyppx_ocv_mat* e,
    jyppx_ocv_mat* f,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_stereo_calibrate_extended(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point1_offsets,
    int image_point1_group_count,
    const jyppx_ocv_calib3d_point2f* image_points1,
    int image_point1_count,
    const int* image_point2_offsets,
    int image_point2_group_count,
    const jyppx_ocv_calib3d_point2f* image_points2,
    int image_point2_count,
    jyppx_ocv_mat* camera_matrix1,
    jyppx_ocv_mat* dist_coeffs1,
    jyppx_ocv_mat* camera_matrix2,
    jyppx_ocv_mat* dist_coeffs2,
    int image_width,
    int image_height,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    jyppx_ocv_mat* e,
    jyppx_ocv_mat* f,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    jyppx_ocv_mat* per_view_errors,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_calibrate(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point_offsets,
    int image_point_group_count,
    const jyppx_ocv_calib3d_point2f* image_points,
    int image_point_count,
    int image_width,
    int image_height,
    jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_stereo_calibrate(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point1_offsets,
    int image_point1_group_count,
    const jyppx_ocv_calib3d_point2f* image_points1,
    int image_point1_count,
    const int* image_point2_offsets,
    int image_point2_group_count,
    const jyppx_ocv_calib3d_point2f* image_points2,
    int image_point2_count,
    jyppx_ocv_mat* camera_matrix1,
    jyppx_ocv_mat* dist_coeffs1,
    jyppx_ocv_mat* camera_matrix2,
    jyppx_ocv_mat* dist_coeffs2,
    int image_width,
    int image_height,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_stereo_calibrate_extended(
    const int* object_point_offsets,
    int object_point_group_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point1_offsets,
    int image_point1_group_count,
    const jyppx_ocv_calib3d_point2f* image_points1,
    int image_point1_count,
    const int* image_point2_offsets,
    int image_point2_group_count,
    const jyppx_ocv_calib3d_point2f* image_points2,
    int image_point2_count,
    jyppx_ocv_mat* camera_matrix1,
    jyppx_ocv_mat* dist_coeffs1,
    jyppx_ocv_mat* camera_matrix2,
    jyppx_ocv_mat* dist_coeffs2,
    int image_width,
    int image_height,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_register_cameras(
    const int* object_point1_offsets,
    int object_point1_group_count,
    const jyppx_ocv_calib3d_point3f* object_points1,
    int object_point1_count,
    const int* object_point2_offsets,
    int object_point2_group_count,
    const jyppx_ocv_calib3d_point3f* object_points2,
    int object_point2_count,
    const int* image_point1_offsets,
    int image_point1_group_count,
    const jyppx_ocv_calib3d_point2f* image_points1,
    int image_point1_count,
    const int* image_point2_offsets,
    int image_point2_group_count,
    const jyppx_ocv_calib3d_point2f* image_points2,
    int image_point2_count,
    const jyppx_ocv_mat* camera_matrix1,
    const jyppx_ocv_mat* dist_coeffs1,
    int camera_model1,
    const jyppx_ocv_mat* camera_matrix2,
    const jyppx_ocv_mat* dist_coeffs2,
    int camera_model2,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    jyppx_ocv_mat* e,
    jyppx_ocv_mat* f,
    jyppx_ocv_mat* per_view_errors,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_register_cameras_extended(
    const int* object_point1_offsets,
    int object_point1_group_count,
    const jyppx_ocv_calib3d_point3f* object_points1,
    int object_point1_count,
    const int* object_point2_offsets,
    int object_point2_group_count,
    const jyppx_ocv_calib3d_point3f* object_points2,
    int object_point2_count,
    const int* image_point1_offsets,
    int image_point1_group_count,
    const jyppx_ocv_calib3d_point2f* image_points1,
    int image_point1_count,
    const int* image_point2_offsets,
    int image_point2_group_count,
    const jyppx_ocv_calib3d_point2f* image_points2,
    int image_point2_count,
    const jyppx_ocv_mat* camera_matrix1,
    const jyppx_ocv_mat* dist_coeffs1,
    int camera_model1,
    const jyppx_ocv_mat* camera_matrix2,
    const jyppx_ocv_mat* dist_coeffs2,
    int camera_model2,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    jyppx_ocv_mat* e,
    jyppx_ocv_mat* f,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    jyppx_ocv_mat* per_view_errors,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibrate_multiview(
    const int* object_point_offsets,
    int frame_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point_offsets,
    int camera_count,
    int image_frame_count,
    const jyppx_ocv_calib3d_point2f* image_points,
    int image_point_count,
    const int* image_widths,
    const int* image_heights,
    const unsigned char* detection_mask,
    const int* camera_models,
    jyppx_ocv_mat* const* camera_matrices,
    jyppx_ocv_mat* const* dist_coeffs,
    jyppx_ocv_mat* const* rotation_vectors,
    jyppx_ocv_mat* const* translation_vectors,
    const int* flags_for_intrinsics,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibrate_multiview_extended(
    const int* object_point_offsets,
    int frame_count,
    const jyppx_ocv_calib3d_point3f* object_points,
    int object_point_count,
    const int* image_point_offsets,
    int camera_count,
    int image_frame_count,
    const jyppx_ocv_calib3d_point2f* image_points,
    int image_point_count,
    const int* image_widths,
    const int* image_heights,
    const unsigned char* detection_mask,
    const int* camera_models,
    jyppx_ocv_mat* const* camera_matrices,
    jyppx_ocv_mat* const* dist_coeffs,
    jyppx_ocv_mat* const* rotation_vectors,
    jyppx_ocv_mat* const* translation_vectors,
    jyppx_ocv_mat* initialization_pairs,
    jyppx_ocv_mat* const* rvecs0,
    jyppx_ocv_mat* const* tvecs0,
    jyppx_ocv_mat* per_frame_errors,
    const int* flags_for_intrinsics,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double* reprojection_error);