src/OpenCvSharp/Internal/Interop/NativeMethods.Calib3D.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_stereo_rectify_uncalibrated")]
        internal static partial int Calib3DStereoRectifyUncalibrated(IntPtr points1, IntPtr points2, IntPtr fundamental, int imageWidth, int imageHeight, IntPtr h1, IntPtr h2, double threshold, out int success);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibrate_hand_eye")]
        internal static partial int Calib3DCalibrateHandEye(IntPtr* rGripper2Base, IntPtr* tGripper2Base, IntPtr* rTarget2Cam, IntPtr* tTarget2Cam, int poseCount, IntPtr rCam2Gripper, IntPtr tCam2Gripper, int method);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibrate_robot_world_hand_eye")]
        internal static partial int Calib3DCalibrateRobotWorldHandEye(IntPtr* rWorld2Cam, IntPtr* tWorld2Cam, IntPtr* rBase2Gripper, IntPtr* tBase2Gripper, int poseCount, IntPtr rBase2World, IntPtr tBase2World, IntPtr rGripper2Cam, IntPtr tGripper2Cam, int method);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_init_camera_matrix_2d")]
        internal static partial int Calib3DInitCameraMatrix2D(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePointOffsets, int imagePointGroupCount, Calib3DPoint2fNative* imagePoints, int imagePointCount, int imageWidth, int imageHeight, double aspectRatio, IntPtr cameraMatrix);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibrate_camera")]
        internal static partial int Calib3DCalibrateCamera(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePointOffsets, int imagePointGroupCount, Calib3DPoint2fNative* imagePoints, int imagePointCount, int imageWidth, int imageHeight, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvecs, IntPtr tvecs, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibrate_camera_extended")]
        internal static partial int Calib3DCalibrateCameraExtended(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePointOffsets, int imagePointGroupCount, Calib3DPoint2fNative* imagePoints, int imagePointCount, int imageWidth, int imageHeight, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvecs, IntPtr tvecs, IntPtr stdDeviationsIntrinsics, IntPtr stdDeviationsExtrinsics, IntPtr perViewErrors, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibrate_camera_ro")]
        internal static partial int Calib3DCalibrateCameraRO(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePointOffsets, int imagePointGroupCount, Calib3DPoint2fNative* imagePoints, int imagePointCount, int imageWidth, int imageHeight, int iFixedPoint, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvecs, IntPtr tvecs, IntPtr newObjectPoints, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibrate_camera_ro_extended")]
        internal static partial int Calib3DCalibrateCameraROExtended(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePointOffsets, int imagePointGroupCount, Calib3DPoint2fNative* imagePoints, int imagePointCount, int imageWidth, int imageHeight, int iFixedPoint, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvecs, IntPtr tvecs, IntPtr newObjectPoints, IntPtr stdDeviationsIntrinsics, IntPtr stdDeviationsExtrinsics, IntPtr stdDeviationsObjectPoints, IntPtr perViewErrors, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_stereo_calibrate")]
        internal static partial int Calib3DStereoCalibrate(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePoint1Offsets, int imagePoint1GroupCount, Calib3DPoint2fNative* imagePoints1, int imagePoint1Count, int* imagePoint2Offsets, int imagePoint2GroupCount, Calib3DPoint2fNative* imagePoints2, int imagePoint2Count, IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int imageWidth, int imageHeight, IntPtr r, IntPtr t, IntPtr e, IntPtr f, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_stereo_calibrate_extended")]
        internal static partial int Calib3DStereoCalibrateExtended(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePoint1Offsets, int imagePoint1GroupCount, Calib3DPoint2fNative* imagePoints1, int imagePoint1Count, int* imagePoint2Offsets, int imagePoint2GroupCount, Calib3DPoint2fNative* imagePoints2, int imagePoint2Count, IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int imageWidth, int imageHeight, IntPtr r, IntPtr t, IntPtr e, IntPtr f, IntPtr rvecs, IntPtr tvecs, IntPtr perViewErrors, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_calibrate")]
        internal static partial int Calib3DFisheyeCalibrate(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePointOffsets, int imagePointGroupCount, Calib3DPoint2fNative* imagePoints, int imagePointCount, int imageWidth, int imageHeight, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvecs, IntPtr tvecs, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_stereo_calibrate")]
        internal static partial int Calib3DFisheyeStereoCalibrate(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePoint1Offsets, int imagePoint1GroupCount, Calib3DPoint2fNative* imagePoints1, int imagePoint1Count, int* imagePoint2Offsets, int imagePoint2GroupCount, Calib3DPoint2fNative* imagePoints2, int imagePoint2Count, IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int imageWidth, int imageHeight, IntPtr r, IntPtr t, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_stereo_calibrate_extended")]
        internal static partial int Calib3DFisheyeStereoCalibrateExtended(int* objectPointOffsets, int objectPointGroupCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePoint1Offsets, int imagePoint1GroupCount, Calib3DPoint2fNative* imagePoints1, int imagePoint1Count, int* imagePoint2Offsets, int imagePoint2GroupCount, Calib3DPoint2fNative* imagePoints2, int imagePoint2Count, IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int imageWidth, int imageHeight, IntPtr r, IntPtr t, IntPtr rvecs, IntPtr tvecs, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_register_cameras")]
        internal static partial int Calib3DRegisterCameras(int* objectPoint1Offsets, int objectPoint1GroupCount, Calib3DPoint3fNative* objectPoints1, int objectPoint1Count, int* objectPoint2Offsets, int objectPoint2GroupCount, Calib3DPoint3fNative* objectPoints2, int objectPoint2Count, int* imagePoint1Offsets, int imagePoint1GroupCount, Calib3DPoint2fNative* imagePoints1, int imagePoint1Count, int* imagePoint2Offsets, int imagePoint2GroupCount, Calib3DPoint2fNative* imagePoints2, int imagePoint2Count, IntPtr cameraMatrix1, IntPtr distCoeffs1, int cameraModel1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int cameraModel2, IntPtr r, IntPtr t, IntPtr e, IntPtr f, IntPtr perViewErrors, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_register_cameras_extended")]
        internal static partial int Calib3DRegisterCamerasExtended(int* objectPoint1Offsets, int objectPoint1GroupCount, Calib3DPoint3fNative* objectPoints1, int objectPoint1Count, int* objectPoint2Offsets, int objectPoint2GroupCount, Calib3DPoint3fNative* objectPoints2, int objectPoint2Count, int* imagePoint1Offsets, int imagePoint1GroupCount, Calib3DPoint2fNative* imagePoints1, int imagePoint1Count, int* imagePoint2Offsets, int imagePoint2GroupCount, Calib3DPoint2fNative* imagePoints2, int imagePoint2Count, IntPtr cameraMatrix1, IntPtr distCoeffs1, int cameraModel1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int cameraModel2, IntPtr r, IntPtr t, IntPtr e, IntPtr f, IntPtr rvecs, IntPtr tvecs, IntPtr perViewErrors, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibrate_multiview")]
        internal static partial int Calib3DCalibrateMultiview(int* objectPointOffsets, int frameCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePointOffsets, int cameraCount, int imageFrameCount, Calib3DPoint2fNative* imagePoints, int imagePointCount, int* imageWidths, int* imageHeights, byte* detectionMask, int* cameraModels, IntPtr* cameraMatrices, IntPtr* distCoeffs, IntPtr* rotationVectors, IntPtr* translationVectors, int* flagsForIntrinsics, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibrate_multiview_extended")]
        internal static partial int Calib3DCalibrateMultiviewExtended(int* objectPointOffsets, int frameCount, Calib3DPoint3fNative* objectPoints, int objectPointCount, int* imagePointOffsets, int cameraCount, int imageFrameCount, Calib3DPoint2fNative* imagePoints, int imagePointCount, int* imageWidths, int* imageHeights, byte* detectionMask, int* cameraModels, IntPtr* cameraMatrices, IntPtr* distCoeffs, IntPtr* rotationVectors, IntPtr* translationVectors, IntPtr initializationPairs, IntPtr* rvecs0, IntPtr* tvecs0, IntPtr perFrameErrors, int* flagsForIntrinsics, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out double reprojectionError);
